--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Floating Dots with Moving Gradient</h1>
+        <h1>Task Calculator</h1>
         <label for="percentage">Enter Percentage (0-100):</label>
         <input type="number" id="percentage" placeholder="Enter percentage">
         
