--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time and Percentage Calculator</title>
+    <title>Allocation Time and Percentage Calculator</title>
     <style>
         /* Reset margin and padding */
         body, html {
@@ -108,7 +108,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Time and Percentage Calculator</h1>
+        <h1>Allocation Time and Percentage Calculator</h1>
         
         <label for="inputType">Select Calculation Type:</label>
         <select id="inputType" onchange="toggleInputFields()">
