--- a/index.html
+++ b/index.html
@@ -160,11 +160,92 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     z-index: 100;
 }
+.calendar-container {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-family: 'Arial', sans-serif;
+    z-index: 100;
+    width: 300px;
+}
+
+.calendar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.calendar-header button {
+    background: #444;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.calendar-header button:hover {
+    background: #666;
+}
+
+.calendar {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+.calendar th,
+.calendar td {
+    padding: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+}
+
+.calendar th {
+    color: #ddd;
+    font-weight: bold;
+}
+
+.calendar td {
+    color: #fff;
+}
+
+.calendar td:hover {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+}
 
     </style>
 </head>
 <body>
     <div class="date-time" id="dateTime"></div>
+<div class="calendar-container">
+    <div class="calendar-header">
+        <button class="prev-month" onclick="changeMonth(-1)">&#8249;</button>
+        <span id="monthYear"></span>
+        <button class="next-month" onclick="changeMonth(1)">&#8250;</button>
+    </div>
+    <table class="calendar">
+        <thead>
+            <tr>
+                <th>Sun</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thu</th>
+                <th>Fri</th>
+                <th>Sat</th>
+            </tr>
+        </thead>
+        <tbody id="calendarBody"></tbody>
+    </table>
+</div>
 
     <div class="container">
         <h1>Allocation Time and Percentage Calculator</h1>
@@ -218,6 +299,66 @@ setInterval(updateDateTime, 1000);
 
 // Initialize the date and time on page load
 updateDateTime();
+const calendarBody = document.getElementById("calendarBody");
+const monthYear = document.getElementById("monthYear");
+let currentDate = new Date();
+
+function renderCalendar(date) {
+    calendarBody.innerHTML = ""; // Clear previous calendar
+    const currentMonth = date.getMonth();
+    const currentYear = date.getFullYear();
+
+    // Set the header
+    const monthNames = [
+        "January", "February", "March", "April", "May", "June",
+        "July", "August", "September", "October", "November", "December"
+    ];
+    monthYear.textContent = `${monthNames[currentMonth]} ${currentYear}`;
+
+    // Get the first and last days of the month
+    const firstDay = new Date(currentYear, currentMonth, 1).getDay();
+    const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
+
+    let row = document.createElement("tr");
+    for (let i = 0; i < firstDay; i++) {
+        row.appendChild(document.createElement("td")); // Empty cells for the first week
+    }
+
+    for (let day = 1; day <= daysInMonth; day++) {
+        const cell = document.createElement("td");
+        cell.textContent = day;
+
+        // Highlight today's date
+        if (
+            day === new Date().getDate() &&
+            currentMonth === new Date().getMonth() &&
+            currentYear === new Date().getFullYear()
+        ) {
+            cell.style.background = "#444";
+            cell.style.borderRadius = "50%";
+        }
+
+        row.appendChild(cell);
+
+        // Start a new row after Saturday
+        if ((firstDay + day) % 7 === 0) {
+            calendarBody.appendChild(row);
+            row = document.createElement("tr");
+        }
+    }
+
+    if (row.childNodes.length > 0) {
+        calendarBody.appendChild(row); // Append the last row
+    }
+}
+
+function changeMonth(offset) {
+    currentDate.setMonth(currentDate.getMonth() + offset);
+    renderCalendar(currentDate);
+}
+
+// Initialize the calendar on page load
+renderCalendar(currentDate);
 
         function toggleInputFields() {
             const inputType = document.getElementById("inputType").value;
